--- a/ODD/nbproject/project.properties
+++ b/ODD/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ODD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.h2-1.4.186.jar=non-dev\\drivers\\h2-1.4.186.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.h2-1.4.186.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
