--- a/ODD/nbproject/project.properties
+++ b/ODD/nbproject/project.properties
@@ -30,10 +30,28 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.h2-1.4.186.jar=non-dev\\drivers\\h2-1.4.186.jar
+file.reference.itext-pdfa-5.4.1-javadoc.jar=non-dev\\drivers\\iText 5.4.1\\itext-pdfa-5.4.1-javadoc.jar
+file.reference.itext-pdfa-5.4.1-sources.jar=non-dev\\drivers\\iText 5.4.1\\itext-pdfa-5.4.1-sources.jar
+file.reference.itext-pdfa-5.4.1.jar=non-dev\\drivers\\iText 5.4.1\\itext-pdfa-5.4.1.jar
+file.reference.itext-xtra-5.4.1-javadoc.jar=non-dev\\drivers\\iText 5.4.1\\itext-xtra-5.4.1-javadoc.jar
+file.reference.itext-xtra-5.4.1-sources.jar=non-dev\\drivers\\iText 5.4.1\\itext-xtra-5.4.1-sources.jar
+file.reference.itext-xtra-5.4.1.jar=non-dev\\drivers\\iText 5.4.1\\itext-xtra-5.4.1.jar
+file.reference.itextpdf-5.4.1-javadoc.jar=non-dev\\drivers\\iText 5.4.1\\itextpdf-5.4.1-javadoc.jar
+file.reference.itextpdf-5.4.1-sources.jar=non-dev\\drivers\\iText 5.4.1\\itextpdf-5.4.1-sources.jar
+file.reference.itextpdf-5.4.1.jar=non-dev\\drivers\\iText 5.4.1\\itextpdf-5.4.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.h2-1.4.186.jar}
+    ${file.reference.h2-1.4.186.jar}:\
+    ${file.reference.itext-pdfa-5.4.1-javadoc.jar}:\
+    ${file.reference.itext-pdfa-5.4.1-sources.jar}:\
+    ${file.reference.itext-pdfa-5.4.1.jar}:\
+    ${file.reference.itext-xtra-5.4.1-javadoc.jar}:\
+    ${file.reference.itext-xtra-5.4.1-sources.jar}:\
+    ${file.reference.itext-xtra-5.4.1.jar}:\
+    ${file.reference.itextpdf-5.4.1-javadoc.jar}:\
+    ${file.reference.itextpdf-5.4.1-sources.jar}:\
+    ${file.reference.itextpdf-5.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
